update registration form

--- a/EventEase/Components/App.razor
+++ b/EventEase/Components/App.razor
@@ -17,6 +17,7 @@
 <body>
     <Routes />
     <EventEase.Components.Layout.ReconnectModal />
+    <script src="@Assets["sessionStorageInterop.js"]"></script>
     <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
 
